# DevForge-MAS

./: .bandit  .coverage  .coveragerc  .env.example  .gitignore  .markdownlint.yaml  .markdownlint.yml  .pre-commit-config.yaml  .pymarkdown.json  .pymarkdown.yml  .secrets.baseline  .yamllint.yaml  API.md  ARCHITECTURE.md  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Dockerfile  MAKE.md  Makefile  RELEASE_NOTES_0.1.0-rc.1.md  SBOM-LITE.txt  SECURITY.md  SHA256SUMS.txt  bandit.yaml  docker-compose.yml  package-lock.json  package.json  pyproject.toml  pytest.ini  release_report.json  release_report.txt  requirements-dev.in  requirements-dev.txt  requirements.in
.checks/: branch_policy.json
.github/workflows/: ci.yml  release.yml  security.yml
compliance/: policy.yaml
config/: alerts.yml  ops.yaml
configs/: agents.yaml
configs/workflows/: app_build.yaml
db/: README.md  schema.sql
db/queries/: examples.sql  smoke_sqlite.sql
docs/: ADR_INDEX.md  API.md
docs/adr/: adr-017-packaging-docker.md
frontend/: package.json
make/: monitoring.mk
mas/: __init__.py  cli.py
migrations/: 001_init.sql  002_seed_minimal.sql
release/db_backups/: devforge_mas_v0.6.0_pre.sqlitedb
release/v0.6.0/: CHANGELOG.md  LICENSE  README.md  SHA256SUMS.txt
release/v0.6.0/.checks/: architect.md5  techlead.md5
release/v0.6.0/ADR/: ADR-002.md  ADR-003.md  ADR-SET.json
release/v0.6.0/compliance/: OBLIGATIONS.md  SPDX-POLICY.md  _violations.json
release/v0.6.0/sqlite/: ddl.sql  seed.sql
release/v0.6.0/sqlite/migrations/: 0001_init.sql
schemas/: log_record.schema.json
scripts/: api_smoke.sh  verify_stage1.sh  verify_techlead.sh
scripts/compliance/: gen_third_party.py  gen_third_party.py.bak
scripts/monitoring/: notify_mac.sh
scripts/patches/: fix_gen_third_party_mypy.sh  mypy_relax_violations_container.sh  normalize_write_violations.sh  rollback_fix_gen_third_party_mypy.sh  ruff_up038_quiet.sh
scripts/release/: build_release.sh
scripts/sqlite/: ddl.sql  seed.sql
security/: bandit.yml  gitleaks.toml
seeds/: dev_seed.sql
src/: __init__.py
src/agents/: compliance.py  data.py  devops.py  frontend.py  intake_pm.py  ops_monitor.py  release.py  researcher.py  reviewer.py  security.py  supervisor.py  tech_writer.py  techlead.py  ux_writer.py
src/devforge_mas.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/devforge_mas/schemas/: CONTRACTS.json
src/mas/: __init__.py  _probe.py  cli.py
src/mas/agents/: architect.py  backend.py  integrator.py  planner.py  qa.py
src/mas/core/: agent.py  bus.py  memory.py  tools.py  workflow.py
src/mas/server/: __init__.py  api.py
src/mas/tools/: codegen.py  doc_builder.py  repo.py
src/mas/utils/: json_logger.py
tests/: conftest.py  test_api_contracts.py  test_imports_coverage.py  test_integration_contracts.py  test_server_error_branch.py  test_server_smoke.py  test_smoke.py
tests_db/: test_sqlite_migrations.py
tests_fe/: test_build_smoke.py
tools/: adr_index.py  changelog.sh  ci_fail_on_bandit.py  db_export_state.py  db_smoke_sqlite.py  md_autofix.py  md_fix_blanks.py  release_bundle.sh  release_bundle_verify.sh  release_verify.py  validate_contracts.py  verify_architect.sh  verify_security_artifacts.py
tools/monitor/: alerts.py  collect.py  gen_lint_report.py  tui.py
tools/ops/: checks.sh  collect_metrics.py  logger.py  monitor.py
workspace/: CONTRACTS.json  LAYOUT.json  acceptance_criteria.md  brief.md  wbs.md
workspace/.checks/: .keep
workspace/.monitor/: state.json
workspace/adr/: ADR-001.md  ADR-INDEX.md
workspace/backend/: main.py
workspace/contracts/: CONTRACTS.json
workspace/docs/brief/: project_brief.json
workspace/frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
workspace/frontend/src/: App.js  App.tsx  main.js  main.tsx  styles.css  vite-env.d.ts
workspace/frontend/src/components/: EndpointCard.js  EndpointCard.tsx  SchemaForm.js  SchemaForm.tsx
workspace/frontend/src/lib/: api.js  api.ts  contracts.js  contracts.ts
workspace/layout/: LAYOUT.json
workspace/release/v0.1.0/: CHANGELOG.md  SHA256SUMS.txt
workspace/release/v0.1.0/compliance/: NOTICE  THIRD_PARTY_LICENSES.md
workspace/research/: factsheet_devforge_mas.md
workspace/security/: HARDENING.md  SAST_CHECKLIST.md  STRIDE.md
workspace/wbs/: wbs.json
